<resources>
    <string name="app_name">Railway Enquiry</string>
    <string name="icon">icon</string>
    <string name="card1_text">Live Train Status</string>
    <string name="card1_text_hint">Train Name/No.</string>
    <string name="card2_text">Train Route</string>
    <string name="card3_text">Travel Enquiry</string>
    <string name="card4_text">PNR Status</string>
    <string name="card5_text">Station Schedule</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="unavailable">Train not available</string>

    <string name="stat"><![CDATA[<b>Status:</b> Departed from Bale at 22:18 22-Jan. 451 Kms. ahead of C Shivaji Maharaj T. ]]></string>
    <string name="TTColumn1">Station</string>
    <string name="TTColumn2">Arrival</string>
    <string name="TTColumn3">Departure</string>
    <string name="tab_text_1">Rescheduled</string>
    <string name="tab_text_2">Cancelled</string>
    <string name="cardtext6">Reschedules and Cancellations</string>
    <string name="PNRHint">10 Digit PNR No.</string>
    <string name="PNRPassengerDetailText">Passenger List</string>
    <string name="reschedules">Reschedules</string>
    <string name="cancellations">Cancellations</string>
    <string name="station_schedule_hint">Station Name/Code</string>
</resources>
