<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context=".Fragments.TrainRouteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screen2"
        android:background="@drawable/card_main_bg"
        android:transitionName="card2_transition"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/card2_text"
            android:textSize="36sp"
            android:transitionName="cardtext2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="84dp"
            android:layout_height="74dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/icon"
            android:transitionName="trainroute"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/trainroute" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="162dp"
            android:layout_marginTop="200dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <View
                android:id="@+id/view7"
                android:layout_width="234dp"
                android:layout_height="97dp"
                android:background="@drawable/card_secondary_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Theme.App.Base"
                android:layout_width="212dp"
                android:layout_height="84dp"
                android:hint="@string/card1_text_hint"
                android:textColorHint="@color/white"
                android:theme="@style/Theme.App.Base"
                app:boxStrokeColor="@color/white"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/view7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/view7"
                app:layout_constraintTop_toTopOf="@+id/view7">

                <AutoCompleteTextView
                    android:id="@+id/autocomplete_card2"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:completionThreshold="3"
                    android:labelFor="@id/textInputLayout"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/livestatuscard"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="28dp"
                android:clickable="true"
                android:foreground="@mipmap/buttonicon"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

